--- a/hw-simd.cabal
+++ b/hw-simd.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7f67e773fa749809f982618fe91b13568a38d2844667c75ae1e3be2ddd7e9bf6
+-- hash: 877f75af9eaaefeba5a62e756c412ca02633e2783d39f8c2ef5e73653cc87a21
 
 name:           hw-simd
 version:        0.0.0.1
@@ -23,7 +23,6 @@ cabal-version:  >= 1.10
 extra-source-files:
     cbits/simd.h
     ChangeLog.md
-    data/bench/data-0001000.csv
     README.md
 
 source-repository head
@@ -153,6 +152,7 @@ benchmark bench
     , bits-extra >=0.0.1.2 && <0.1
     , bytestring >=0.10 && <0.11
     , cassava >=0.5.1.0 && <0.6
+    , containers
     , criterion >=1.4.1.0 && <1.5
     , deepseq >=1.4 && <1.5
     , directory >=1.3.1.5 && <1.4
