--- a/package.yaml
+++ b/package.yaml
@@ -68,6 +68,7 @@ benchmarks:
     - -msse4.2
     dependencies:
     - cassava               >= 0.5.1.0    && < 0.6
+    - containers
     - criterion             >= 1.4.1.0    && < 1.5
     - directory             >= 1.3.1.5    && < 1.4
     - hw-simd
