New Classy API.  Also bit-wise logical functions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "*.chs": "haskell",
     "cstddef": "c",
     "__functional_03": "c",
-    "functional": "c"
+    "functional": "c",
+    "__locale": "c"
   }
 }
