--- a/stack-avx2.yaml
+++ b/stack-avx2.yaml
@@ -3,10 +3,8 @@ resolver: lts-12.0
 packages:
 - .
 
-- location: ../hw-hedgehog
-  extra-dep: true
-
 extra-deps:
+- hw-hedgehog-0.1.0.2
 - hw-rankselect-0.12.0.3
 - lazy-csv-0.5.1
 - sv-0.1
