--- a/package.yaml
+++ b/package.yaml
@@ -33,6 +33,7 @@ dependencies:
 - hw-rankselect-base    >= 0.3.2.0  && < 0.4
 - hw-prim               >= 0.6.2.12 && < 0.7
 - vector                >= 0.12.0.1 && < 0.13
+- text                  >= 1.2      && < 2
 
 library:
   source-dirs: src
