--- a/hw-simd.cabal
+++ b/hw-simd.cabal
@@ -42,7 +42,7 @@ common base                 { build-depends: base                 >= 4.7        
 common bits-extra           { build-depends: bits-extra           >= 0.0.1.2    && < 0.1    }
 common bytestring           { build-depends: bytestring           >= 0.10       && < 0.11   }
 common cassava              { build-depends: cassava              >= 0.5.1.0    && < 0.6    }
-common containers           { build-depends: containers                                     }
+common containers           { build-depends: containers           >= 0.5        && < 0.7    }
 common criterion            { build-depends: criterion            >= 1.4.1.0    && < 1.6    }
 common deepseq              { build-depends: deepseq              >= 1.4        && < 1.5    }
 common directory            { build-depends: directory            >= 1.2.2      && < 1.4    }
@@ -54,7 +54,7 @@ common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    
 common hw-prim              { build-depends: hw-prim              >= 0.6.2.12   && < 0.7    }
 common hw-rankselect        { build-depends: hw-rankselect        >= 0.13       && < 0.14   }
 common hw-rankselect-base   { build-depends: hw-rankselect-base   >= 0.3.2.0    && < 0.4    }
-common lens                 { build-depends: lens                                           }
+common lens                 { build-depends: lens                 >= 4          && < 5      }
 common mmap                 { build-depends: mmap                 >= 0.5.9      && < 0.6    }
 common text                 { build-depends: text                 >= 1.2.2      && < 2.0    }
 common vector               { build-depends: vector               >= 0.12.0.1   && < 0.13   }
