--- a/hw-simd.cabal
+++ b/hw-simd.cabal
@@ -1,23 +1,23 @@
-cabal-version:  2.2
-name:           hw-simd
-version:        0.1.1.5
-synopsis:       SIMD library
-description:    Please see the README on Github at <https://github.com/haskell-works/hw-simd#readme>
-category:       Data, Bit, SIMD
-homepage:       https://github.com/haskell-works/hw-simd#readme
-bug-reports:    https://github.com/haskell-works/hw-simd/issues
-author:         John Ky
-maintainer:     newhoggy@gmail.com
-copyright:      2018-2019 John Ky
-license:        BSD-3-Clause
-license-file:   LICENSE
-tested-with:    GHC == 8.8.1, GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2
-build-type:     Simple
-extra-source-files:
-    README.md
-    ChangeLog.md
-    cbits/simd.h
-    cbits/simd_debug.h
+cabal-version: 2.2
+
+name:                   hw-simd
+version:                0.1.1.5
+synopsis:               SIMD library
+description:            Please see the README on Github at <https://github.com/haskell-works/hw-simd#readme>
+category:               Data, Bit, SIMD
+homepage:               https://github.com/haskell-works/hw-simd#readme
+bug-reports:            https://github.com/haskell-works/hw-simd/issues
+author:                 John Ky
+maintainer:             newhoggy@gmail.com
+copyright:              2018-2019 John Ky
+license:                BSD-3-Clause
+license-file:           LICENSE
+tested-with:            GHC == 8.8.1, GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2
+build-type:             Simple
+extra-source-files:     README.md
+                        ChangeLog.md
+                        cbits/simd.h
+                        cbits/simd_debug.h
 
 source-repository head
   type: git
@@ -46,6 +46,8 @@ common containers           { build-depends: containers           >= 0.5        
 common criterion            { build-depends: criterion            >= 1.4.1.0    && < 1.6    }
 common deepseq              { build-depends: deepseq              >= 1.4        && < 1.5    }
 common directory            { build-depends: directory            >= 1.2.2      && < 1.4    }
+common doctest              { build-depends: doctest              >= 0.16.2     && < 0.17   }
+common doctest-discover     { build-depends: doctest-discover     >= 0.2        && < 0.3    }
 common hedgehog             { build-depends: hedgehog             >= 0.5        && < 1.1    }
 common hspec                { build-depends: hspec                >= 2.4        && < 3      }
 common hw-bits              { build-depends: hw-bits              >= 0.7.0.2    && < 0.8    }
@@ -62,142 +64,120 @@ common vector               { build-depends: vector               >= 0.12.0.1   
 common semigroups   { if (!impl(ghc >= 8.0.1)) { build-depends: semigroups   >=  0.8.4   && < 0.19 } }
 common transformers { if (!impl(ghc >= 8.0.1)) { build-depends: transformers >=  0.4     && < 0.6  } }
 
-common common
-  default-language: Haskell2010
+common config
+  default-language:     Haskell2010
+  ghc-options:          -O2 -Wall
+  if (flag(avx2)) && (impl(ghc >=8.4.1))
+    ghc-options:        -mbmi2 -msse4.2
+    cpp-options:        -DBMI2_ENABLED -DAVX2_ENABLED
+  if (impl(ghc >=8.0.1))
+    ghc-options:        -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
+  if flag(avx2)
+    cc-options:         -mavx2 -DAVX2_ENABLED
+  if (flag(bmi2)) && (impl(ghc >=8.4.1))
+    ghc-options:        -mbmi2 -msse4.2
+  if flag(bmi2)
+    cc-options:         -mbmi2 -DBMI2_ENABLED
+  if flag(sse42)
+    ghc-options:        -msse4.2
+    cc-options:         -msse4.2
+
+common hw-simd
+  build-depends:        hw-simd
 
 library
-  import:   base, common
-          , bits-extra
-          , bytestring
-          , deepseq
-          , hw-bits
-          , hw-prim
-          , hw-rankselect
-          , hw-rankselect-base
-          , semigroups
-          , transformers
-          , vector
-  exposed-modules:
-      HaskellWorks.Data.Simd.Capabilities
-      HaskellWorks.Data.Simd.ChunkString
-      HaskellWorks.Data.Simd.Comparison
-      HaskellWorks.Data.Simd.Comparison.Avx2
-      HaskellWorks.Data.Simd.Comparison.Stock
-      HaskellWorks.Data.Simd.Internal.Bits
-      HaskellWorks.Data.Simd.Internal.Broadword
-      HaskellWorks.Data.Simd.Internal.ChunkString
-      HaskellWorks.Data.Simd.Internal.Foreign
-      HaskellWorks.Data.Simd.Internal.Marshal
-      HaskellWorks.Data.Simd.Logical
-      HaskellWorks.Data.Simd.Logical.Avx2
-      HaskellWorks.Data.Simd.Logical.Stock
-  other-modules:    Paths_hw_simd
-  autogen-modules:  Paths_hw_simd
-  hs-source-dirs:   src
-  ghc-options:      -O2 -Wall
-  include-dirs:     cbits
-  c-sources:
-      cbits/simd_avx2.c
-      cbits/simd_sse2.c
-  if flag(sse42)
-    ghc-options: -msse4.2
-    cc-options: -msse4.2
-  if flag(bmi2)
-    cc-options: -mbmi2 -DBMI2_ENABLED
-  if (flag(bmi2)) && (impl(ghc >=8.4.1))
-    ghc-options: -mbmi2 -msse4.2
-  if flag(avx2)
-    cc-options: -mavx2 -DAVX2_ENABLED
-  if (flag(avx2)) && (impl(ghc >=8.4.1))
-    ghc-options: -mbmi2 -msse4.2
-    cpp-options: -DBMI2_ENABLED -DAVX2_ENABLED
-  if (impl(ghc >=8.0.1))
-    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
-  if (!impl(ghc >=8.0.1))
-    build-depends:
-        semigroups >=0.8.4 && <0.19
-      , transformers >=0.4 && <0.6
+  import:               base, config
+                      , bits-extra
+                      , bytestring
+                      , deepseq
+                      , hw-bits
+                      , hw-prim
+                      , hw-rankselect
+                      , hw-rankselect-base
+                      , semigroups
+                      , transformers
+                      , vector
+  exposed-modules:      HaskellWorks.Data.Simd.Capabilities
+                        HaskellWorks.Data.Simd.ChunkString
+                        HaskellWorks.Data.Simd.Comparison
+                        HaskellWorks.Data.Simd.Comparison.Avx2
+                        HaskellWorks.Data.Simd.Comparison.Stock
+                        HaskellWorks.Data.Simd.Internal.Bits
+                        HaskellWorks.Data.Simd.Internal.Broadword
+                        HaskellWorks.Data.Simd.Internal.ChunkString
+                        HaskellWorks.Data.Simd.Internal.Foreign
+                        HaskellWorks.Data.Simd.Internal.Marshal
+                        HaskellWorks.Data.Simd.Logical
+                        HaskellWorks.Data.Simd.Logical.Avx2
+                        HaskellWorks.Data.Simd.Logical.Stock
+  other-modules:        Paths_hw_simd
+  autogen-modules:      Paths_hw_simd
+  hs-source-dirs:       src
+  include-dirs:         cbits
+  c-sources:            cbits/simd_avx2.c
+                        cbits/simd_sse2.c
   build-tool-depends:   c2hs:c2hs
 
 test-suite hw-simd-test
-  import:   base, common
-          , bits-extra
-          , bytestring
-          , deepseq
-          , directory
-          , hedgehog
-          , hspec
-          , hw-bits
-          , hw-hedgehog
-          , hw-hspec-hedgehog
-          , hw-prim
-          , hw-rankselect
-          , hw-rankselect-base
-          , lens
-          , text
-          , vector
-  type:             exitcode-stdio-1.0
-  main-is:          Spec.hs
-  build-depends:    hw-simd
-  other-modules:
-      HaskellWorks.Data.Simd.ComparisonSpec
-      HaskellWorks.Data.Simd.Internal.BroadwordSpec
-      HaskellWorks.Data.Simd.LogicalSpec
-      Paths_hw_simd
-  autogen-modules:  Paths_hw_simd
-  hs-source-dirs:   test
-  ghc-options:      -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
-  if flag(sse42)
-    ghc-options: -msse4.2
-    cc-options: -msse4.2
-  if flag(bmi2)
-    cc-options: -mbmi2 -DBMI2_ENABLED
-  if (flag(bmi2)) && (impl(ghc >=8.4.1))
-    ghc-options: -mbmi2 -msse4.2
-  if flag(avx2)
-    cc-options: -mavx2 -DAVX2_ENABLED
-  if (flag(avx2)) && (impl(ghc >=8.4.1))
-    ghc-options: -mbmi2 -msse4.2
-    cpp-options: -DBMI2_ENABLED -DAVX2_ENABLED
-  if (impl(ghc >=8.0.1))
-    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
-  build-tool-depends: hspec-discover:hspec-discover
+  import:               base, config
+                      , bits-extra
+                      , bytestring
+                      , deepseq
+                      , directory
+                      , hedgehog
+                      , hspec
+                      , hw-bits
+                      , hw-hedgehog
+                      , hw-hspec-hedgehog
+                      , hw-prim
+                      , hw-rankselect
+                      , hw-rankselect-base
+                      , lens
+                      , text
+                      , vector
+  type:                 exitcode-stdio-1.0
+  main-is:              Spec.hs
+  build-depends:        hw-simd
+  other-modules:        HaskellWorks.Data.Simd.ComparisonSpec
+                        HaskellWorks.Data.Simd.Internal.BroadwordSpec
+                        HaskellWorks.Data.Simd.LogicalSpec
+                        Paths_hw_simd
+  autogen-modules:      Paths_hw_simd
+  hs-source-dirs:       test
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:   hspec-discover:hspec-discover
 
 benchmark bench
-  import:   base, common
-          , bits-extra
-          , bytestring
-          , cassava
-          , containers
-          , criterion
-          , deepseq
-          , directory
-          , hw-bits
-          , hw-prim
-          , hw-rankselect
-          , hw-rankselect-base
-          , mmap
-          , semigroups
-          , transformers
-          , vector
-  type:             exitcode-stdio-1.0
-  main-is:          Main.hs
-  other-modules:    Paths_hw_simd
-  autogen-modules:  Paths_hw_simd
-  hs-source-dirs:   bench
-  ghc-options:      -O2 -Wall -msse4.2
-  build-depends:    hw-simd
-  if flag(sse42)
-    ghc-options: -msse4.2
-    cc-options: -msse4.2
-  if flag(bmi2)
-    cc-options: -mbmi2 -DBMI2_ENABLED
-  if (flag(bmi2)) && (impl(ghc >=8.4.1))
-    ghc-options: -mbmi2 -msse4.2
-  if flag(avx2)
-    cc-options: -mavx2 -DAVX2_ENABLED
-  if (flag(avx2)) && (impl(ghc >=8.4.1))
-    ghc-options: -mbmi2 -msse4.2
-    cpp-options: -DBMI2_ENABLED -DAVX2_ENABLED
-  if (impl(ghc >=8.0.1))
-    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
+  import:               base, config
+                      , bits-extra
+                      , bytestring
+                      , cassava
+                      , containers
+                      , criterion
+                      , deepseq
+                      , directory
+                      , hw-bits
+                      , hw-prim
+                      , hw-rankselect
+                      , hw-rankselect-base
+                      , mmap
+                      , semigroups
+                      , transformers
+                      , vector
+  type:                 exitcode-stdio-1.0
+  main-is:              Main.hs
+  other-modules:        Paths_hw_simd
+  autogen-modules:      Paths_hw_simd
+  hs-source-dirs:       bench
+  build-depends:        hw-simd
+
+test-suite doctest
+  import:               base, config
+                      , doctest
+                      , doctest-discover
+                      , hw-simd
+  type:                 exitcode-stdio-1.0
+  ghc-options:          -threaded
+  main-is:              DoctestDriver.hs
+  HS-Source-Dirs:       doctest
+  build-tool-depends:   doctest-discover:doctest-discover
