--- a/hw-simd.cabal
+++ b/hw-simd.cabal
@@ -9,10 +9,10 @@ homepage:               https://github.com/haskell-works/hw-simd#readme
 bug-reports:            https://github.com/haskell-works/hw-simd/issues
 author:                 John Ky
 maintainer:             newhoggy@gmail.com
-copyright:              2018-2019 John Ky
+copyright:              2018-2020 John Ky
 license:                BSD-3-Clause
 license-file:           LICENSE
-tested-with:            GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2
+tested-with:            GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
 build-type:             Simple
 extra-source-files:     README.md
                         ChangeLog.md
@@ -38,28 +38,29 @@ flag sse42
   manual: False
   default: True
 
-common base                 { build-depends: base                 >= 4.7        && < 5      }
-common bits-extra           { build-depends: bits-extra           >= 0.0.1.2    && < 0.1    }
-common bytestring           { build-depends: bytestring           >= 0.10       && < 0.11   }
-common cassava              { build-depends: cassava              >= 0.5.1.0    && < 0.6    }
-common containers           { build-depends: containers           >= 0.5        && < 0.7    }
-common criterion            { build-depends: criterion            >= 1.4.1.0    && < 1.6    }
-common deepseq              { build-depends: deepseq              >= 1.4        && < 1.5    }
-common directory            { build-depends: directory            >= 1.2.2      && < 1.4    }
-common doctest              { build-depends: doctest              >= 0.16.2     && < 0.17   }
-common doctest-discover     { build-depends: doctest-discover     >= 0.2        && < 0.3    }
-common hedgehog             { build-depends: hedgehog             >= 0.5        && < 1.1    }
-common hspec                { build-depends: hspec                >= 2.4        && < 3      }
-common hw-bits              { build-depends: hw-bits              >= 0.7.0.2    && < 0.8    }
-common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.1    && < 0.2    }
-common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    && < 0.2    }
-common hw-prim              { build-depends: hw-prim              >= 0.6.2.12   && < 0.7    }
-common hw-rankselect        { build-depends: hw-rankselect        >= 0.13       && < 0.14   }
-common hw-rankselect-base   { build-depends: hw-rankselect-base   >= 0.3.2.0    && < 0.4    }
-common lens                 { build-depends: lens                 >= 4          && < 5      }
-common mmap                 { build-depends: mmap                 >= 0.5.9      && < 0.6    }
-common text                 { build-depends: text                 >= 1.2.2      && < 2.0    }
-common vector               { build-depends: vector               >= 0.12.0.1   && < 0.13   }
+common base                       { build-depends: base                       >= 4.11       && < 5      }
+
+common bits-extra                 { build-depends: bits-extra                 >= 0.0.1.2    && < 0.1    }
+common bytestring                 { build-depends: bytestring                 >= 0.10       && < 0.11   }
+common cassava                    { build-depends: cassava                    >= 0.5.1.0    && < 0.6    }
+common containers                 { build-depends: containers                 >= 0.5        && < 0.7    }
+common criterion                  { build-depends: criterion                  >= 1.4.1.0    && < 1.6    }
+common deepseq                    { build-depends: deepseq                    >= 1.4        && < 1.5    }
+common directory                  { build-depends: directory                  >= 1.2.2      && < 1.4    }
+common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.17   }
+common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
+common hedgehog                   { build-depends: hedgehog                   >= 0.5        && < 1.1    }
+common hspec                      { build-depends: hspec                      >= 2.4        && < 3      }
+common hw-bits                    { build-depends: hw-bits                    >= 0.7.0.2    && < 0.8    }
+common hw-hedgehog                { build-depends: hw-hedgehog                >= 0.1.0.1    && < 0.2    }
+common hw-hspec-hedgehog          { build-depends: hw-hspec-hedgehog          >= 0.1.0.4    && < 0.2    }
+common hw-prim                    { build-depends: hw-prim                    >= 0.6.2.12   && < 0.7    }
+common hw-rankselect              { build-depends: hw-rankselect              >= 0.13       && < 0.14   }
+common hw-rankselect-base         { build-depends: hw-rankselect-base         >= 0.3.2.0    && < 0.4    }
+common lens                       { build-depends: lens                       >= 4          && < 5      }
+common mmap                       { build-depends: mmap                       >= 0.5.9      && < 0.6    }
+common text                       { build-depends: text                       >= 1.2.2      && < 2.0    }
+common vector                     { build-depends: vector                     >= 0.12.0.1   && < 0.13   }
 
 common semigroups   { if (!impl(ghc >= 8.0.1)) { build-depends: semigroups   >=  0.8.4   && < 0.19 } }
 common transformers { if (!impl(ghc >= 8.0.1)) { build-depends: transformers >=  0.4     && < 0.6  } }
