--- a/hw-simd.cabal
+++ b/hw-simd.cabal
@@ -12,7 +12,7 @@ maintainer:             newhoggy@gmail.com
 copyright:              2018-2021 John Ky
 license:                BSD-3-Clause
 license-file:           LICENSE
-tested-with:            GHC == 9.0.1, GHC == 8.10.7, GHC == 8.8.4, GHC == 8.6.5
+tested-with:            GHC == 9.2.2, GHC == 9.0.2, GHC == 8.10.7, GHC == 8.8.4, GHC == 8.6.5
 build-type:             Simple
 extra-source-files:     README.md
                         ChangeLog.md
@@ -47,9 +47,9 @@ common containers                 { build-depends: containers                 >=
 common criterion                  { build-depends: criterion                  >= 1.4.1.0    && < 1.6    }
 common deepseq                    { build-depends: deepseq                    >= 1.4        && < 1.5    }
 common directory                  { build-depends: directory                  >= 1.2.2      && < 1.4    }
-common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.19   }
+common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.21   }
 common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
-common hedgehog                   { build-depends: hedgehog                   >= 0.5        && < 1.1    }
+common hedgehog                   { build-depends: hedgehog                   >= 0.5        && < 1.2    }
 common hspec                      { build-depends: hspec                      >= 2.4        && < 3      }
 common hw-bits                    { build-depends: hw-bits                    >= 0.7.0.2    && < 0.8    }
 common hw-hedgehog                { build-depends: hw-hedgehog                >= 0.1.0.1    && < 0.2    }
@@ -59,8 +59,8 @@ common hw-rankselect              { build-depends: hw-rankselect              >=
 common hw-rankselect-base         { build-depends: hw-rankselect-base         >= 0.3.2.0    && < 0.4    }
 common lens                       { build-depends: lens                       >= 4          && < 6      }
 common mmap                       { build-depends: mmap                       >= 0.5.9      && < 0.6    }
-common text                       { build-depends: text                       >= 1.2.2      && < 2.0    }
-common transformers               { build-depends: transformers               >= 0.4        && < 0.6    }
+common text                       { build-depends: text                       >= 1.2.2      && < 2.1    }
+common transformers               { build-depends: transformers               >= 0.4        && < 0.7    }
 common vector                     { build-depends: vector                     >= 0.12.0.1   && < 0.13   }
 
 common config
